force-app/main/default/objects/Account/fields/Account_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Role__c</fullName>
    <formula>IF(ISBLANK(Owner.UserRole.Name), &quot;&quot;, Owner.UserRole.Name)</formula>
    <label>Account Owner Role</label>
    <type>Text</type>
</CustomField>