force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>Used in inContact call routing. Do not change without notifying Support Ops.</description>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
                <default>true</default>
                <label>Onboarding</label>
            </value>
            <value>
                <fullName>Engaged - Removed from Fallout</fullName>
            </value>
            <value>
                <fullName>Unqualified - Closed/Lost</fullName>
            </value>
            <value>
                <fullName>Future Opportunity</fullName>
            </value>
            <value>
                <fullName>Suspended In-Setup</fullName>
            </value>
            <value>
                <fullName>Migrating - Removed from Fallout</fullName>
            </value>
            <value>
                <fullName>Sign-up Completed</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Suspended Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>