force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <formula>IF( Customers_Reward_Eligible__c &gt; 0 , &quot;Reseller&quot; , 
IF( Customers_Reward_Eligible__c = 0, &quot;No Customers&quot; , 
&quot;1+ NDE Customer&quot; ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>