force-app/main/default/objects/Account/fields/Accutics_ID__c.field-meta.xml
<CustomField>
    <fullName>Accutics_ID__c</fullName>
    <description>Lead attribution ID passed from the converted Lead</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Lead attribution ID passed from the converted Lead</inlineHelpText>
    <label>Accutics ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>