force-app/main/default/objects/Account/fields/Anchor_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Pay_Date__c</fullName>
    <label>Anchor Pay Date</label>
    <type>Date</type>
</CustomField>