force-app/main/default/objects/Account/fields/API_Partner__c.field-meta.xml
<CustomField>
    <fullName>API_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to indicate if the partner is an &apos;API Partner&apos;. Used by the partnership teams</description>
    <label>API Partner</label>
    <type>Checkbox</type>
</CustomField>