force-app/main/default/objects/Account/fields/Apply_to_all_clients__c.field-meta.xml
<CustomField>
    <fullName>Apply_to_all_clients__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures if Benefits Out Out apples to all clients (From &quot;Reseller&quot; account down to &quot;Company&quot; Accounts).</description>
    <label>Apply to all clients</label>
    <type>Checkbox</type>
</CustomField>