force-app/main/default/objects/Account/fields/ASR_Number_Of_Accountants__c.field-meta.xml
<CustomField>
    <fullName>ASR_Number_Of_Accountants__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label># of Accountants</label>
    <length>255</length>
    <type>Text</type>
</CustomField>