force-app/main/default/objects/Account/fields/Benefits_401k__c.field-meta.xml
<CustomField>
    <fullName>Benefits_401k__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Benefits 401k (Panda)</label>
    <type>Checkbox</type>
</CustomField>