force-app/main/default/objects/Account/fields/Benefits_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Effective_Date__c</fullName>
    <description>Effective date of BoR HI.
Identified based on survey during onboarding.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Benefits Effective Date</label>
    <type>Date</type>
</CustomField>