force-app/main/default/objects/Account/fields/Benefits_Employees__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Employees__c</fullName>
    <inlineHelpText>The number of full-time employees and owners receiving benefits.</inlineHelpText>
    <label>Benefits Employees</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>