force-app/main/default/objects/Account/fields/Benefits_List__c.field-meta.xml
<CustomField>
    <fullName>Benefits_List__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Benefits List</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>