force-app/main/default/objects/Account/fields/Benefits_Notes__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Benefits Advisor Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>