force-app/main/default/objects/Account/fields/Benefits_Roth_401k__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Roth_401k__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Updated manually from Panda</inlineHelpText>
    <label>Benefits Roth 401k (Panda)</label>
    <type>Checkbox</type>
</CustomField>