force-app/main/default/objects/Account/fields/Benefits_Scorp_Med__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Scorp_Med__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Api</inlineHelpText>
    <label>Benefits Scorp Med (Panda)</label>
    <type>Checkbox</type>
</CustomField>