force-app/main/default/objects/Account/fields/Big_Desk_Sandbox_BenOps__c.field-meta.xml
<CustomField>
    <fullName>Big_Desk_Sandbox_BenOps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked as TRUE based on staging table populated by ZP</description>
    <label>Big Desk Sandbox BenOps</label>
    <type>Checkbox</type>
</CustomField>