force-app/main/default/objects/Account/fields/Carriers__c.field-meta.xml
<CustomField>
    <fullName>Carriers__c</fullName>
    <description>Displays all the Carriers from customers HI Deductions in app.</description>
    <inlineHelpText>Displays all the Carriers from customers HI Deductions in app.</inlineHelpText>
    <label>Carriers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aetna</fullName>
            </value>
            <value>
                <fullName>Anthem Blue Cross</fullName>
            </value>
            <value>
                <fullName>Anthem Blue Cross and Blue Shield of Nevada</fullName>
            </value>
            <value>
                <fullName>Anthem Blue Cross Blue Shield of Connecticut</fullName>
            </value>
            <value>
                <fullName>Anthem Blue Cross Blue Shield of Georgia</fullName>
            </value>
            <value>
                <fullName>Anthem Blue Cross Blue Shield of Indiana</fullName>
            </value>
            <value>
                <fullName>Anthem Blue Cross Blue Shield of Kentucky</fullName>
            </value>
            <value>
                <fullName>Anthem Blue Cross Blue Shield of Maine</fullName>
            </value>
            <value>
                <fullName>Anthem Blue Cross Blue Shield of Missouri</fullName>
            </value>
            <value>
                <fullName>Anthem Blue Cross Blue Shield of New Hampshire</fullName>
            </value>
            <value>
                <fullName>Anthem Blue Cross Blue Shield of Ohio</fullName>
            </value>
            <value>
                <fullName>Anthem Blue Cross Blue Shield of Virginia</fullName>
            </value>
            <value>
                <fullName>Anthem Blue Cross Blue Shield of Wisconsin</fullName>
            </value>
            <value>
                <fullName>Anthem Blue Cross of California</fullName>
            </value>
            <value>
                <fullName>Asuris Northwest Health</fullName>
            </value>
            <value>
                <fullName>Beam</fullName>
            </value>
            <value>
                <fullName>Blue Cross and Blue Shield of Illinois</fullName>
            </value>
            <value>
                <fullName>Blue Cross and Blue Shield of Kansas City</fullName>
            </value>
            <value>
                <fullName>Blue Cross and Blue Shield of Minnesota</fullName>
            </value>
            <value>
                <fullName>Blue Cross and Blue Shield of Oklahoma</fullName>
            </value>
            <value>
                <fullName>Blue Cross and Blue Shield of Texas</fullName>
            </value>
            <value>
                <fullName>Blue Cross Blue Shield</fullName>
            </value>
            <value>
                <fullName>Blue Cross Blue Shield of Arizona</fullName>
            </value>
            <value>
                <fullName>Blue Cross Blue Shield of Michigan</fullName>
            </value>
            <value>
                <fullName>Blue Cross Blue Shield of New Mexico</fullName>
            </value>
            <value>
                <fullName>Blue Cross Blue Shield of Tennessee</fullName>
            </value>
            <value>
                <fullName>Blue Shield of California</fullName>
            </value>
            <value>
                <fullName>California Choice</fullName>
            </value>
            <value>
                <fullName>Capital Blue Cross</fullName>
            </value>
            <value>
                <fullName>CareFirst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>