force-app/main/default/objects/Account/fields/Carriers_Other__c.field-meta.xml
<CustomField>
    <fullName>Carriers_Other__c</fullName>
    <description>Displays all the Carriers from customers HI Deductions in app that are manually entered by the customer when Carrier is Other.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Displays all the Carriers from customers HI Deductions in app that are manually entered by the customer when Carrier is Other.</inlineHelpText>
    <label>Carriers Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>