force-app/main/default/objects/Account/fields/Client_Book_Size__c.field-meta.xml
<CustomField>
    <fullName>Client_Book_Size__c</fullName>
    <description>Total No. of Clients of a Reseller Account.
The status of the client is not considered in calculation.</description>
    <label>Client Book Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>