force-app/main/default/objects/Account/fields/Cohort_Date__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Api</inlineHelpText>
    <label>Cohort Date</label>
    <type>Date</type>
</CustomField>