force-app/main/default/objects/Account/fields/Company_Trade_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Trade_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Trade Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>