force-app/main/default/objects/Account/fields/Concierge_Group__c.field-meta.xml
<CustomField>
    <fullName>Concierge_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Concierge Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>