force-app/main/default/objects/Account/fields/Concierge_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Concierge_Group_Id__c</fullName>
    <label>Concierge Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>