force-app/main/default/objects/Account/fields/CS_Notes__c.field-meta.xml
<CustomField>
    <fullName>CS_Notes__c</fullName>
    <label>CS Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>