force-app/main/default/objects/Account/fields/Current_MRR__c.field-meta.xml
<CustomField>
    <fullName>Current_MRR__c</fullName>
    <label>Current MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>