force-app/main/default/objects/Account/fields/Customers_Reward_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Customers_Reward_Eligible__c</fullName>
    <label>Customers Reward Eligible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>