force-app/main/default/objects/Account/fields/Customers_Rewards_Gain_Loss__c.field-meta.xml
<CustomField>
    <fullName>Customers_Rewards_Gain_Loss__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customers Rewards Gain Loss</label>
    <length>20</length>
    <type>Text</type>
</CustomField>