force-app/main/default/objects/Account/fields/Customers_Signed__c.field-meta.xml
<CustomField>
    <fullName>Customers_Signed__c</fullName>
    <formula>Customers_DE__c / No_Clients_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Customers Signed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>