force-app/main/default/objects/Account/fields/Customers_VDE__c.field-meta.xml
<CustomField>
    <fullName>Customers_VDE__c</fullName>
    <inlineHelpText>Api
The number of companies the firm brought into the Partner Program that count toward the firm&apos;s volume discount tier</inlineHelpText>
    <label>Customers VDE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>