force-app/main/default/objects/Account/fields/CX_Company_Notes__c.field-meta.xml
<CustomField>
    <fullName>CX_Company_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CX Company Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>