force-app/main/default/objects/Account/fields/CX_Company_Notes_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>CX_Company_Notes_Last_Updated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CX Company Notes Last Updated</label>
    <type>DateTime</type>
</CustomField>