force-app/main/default/objects/Account/fields/CX_Experiment__c.field-meta.xml
<CustomField>
    <fullName>CX_Experiment__c</fullName>
    <label>CX Experiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CX_Experiment</valueSetName>
    </valueSet>
</CustomField>