force-app/main/default/objects/Account/fields/Date_of_GEP_Live__c.field-meta.xml
<CustomField>
    <fullName>Date_of_GEP_Live__c</fullName>
    <description>Gusto Embedded Payroll active date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of GEP Live</label>
    <type>Date</type>
</CustomField>