force-app/main/default/objects/Account/fields/Date_of_Last_Upsell_Conversation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Upsell_Conversation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Last Upsell Conversation</label>
    <type>DateTime</type>
</CustomField>