force-app/main/default/objects/Account/fields/Days_Since_Firm_Free_Payroll_Join_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Firm_Free_Payroll_Join_Date__c</fullName>
    <formula>IF( OR (ISBLANK(Reseller_First_Payroll_Date__c), (TODAY() - Reseller_First_Payroll_Date__c) &lt; 0) , &apos;&apos;,
IF( TODAY() -(Reseller_First_Payroll_Date__c ) &lt;=7 , &apos;Last 7 days&apos;,
 IF( TODAY()-(Reseller_First_Payroll_Date__c) &lt;= 30, &apos;Last 30 days&apos;,
 IF( TODAY()-(Reseller_First_Payroll_Date__c) &lt;= 90, &apos;Last 90 days&apos;,
 IF( TODAY()-(Reseller_First_Payroll_Date__c) &lt;= 120, &apos;Last 120 days&apos;,
 IF( TODAY()-(Reseller_First_Payroll_Date__c) &lt;= 365, &apos;Last 365 days&apos;,&apos;More than 365 days&apos;)
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Firm Free Payroll Join Date</label>
    <type>Text</type>
</CustomField>