force-app/main/default/objects/Account/fields/Do_you_use_1099_Contractors__c.field-meta.xml
<CustomField>
    <fullName>Do_you_use_1099_Contractors__c</fullName>
    <description>Created for Ardius.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Do you use 1099 Contractors?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>