force-app/main/default/objects/Account/fields/Eligible_for_EOY_Promo__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_EOY_Promo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for EOY Promo</label>
    <type>Checkbox</type>
</CustomField>