force-app/main/default/objects/Account/fields/EOY_Partner_Level__c.field-meta.xml
<CustomField>
    <fullName>EOY_Partner_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EOY Partner Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>