force-app/main/default/objects/Account/fields/Fast_Ach_Type__c.field-meta.xml
<CustomField>
    <fullName>Fast_Ach_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fast Ach Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>