force-app/main/default/objects/Account/fields/Firm_ID_id__c.field-meta.xml
<CustomField>
    <fullName>Firm_ID_id__c</fullName>
    <formula>IF( ZP_Firm_ID__c != &apos;&apos; , ZP_Firm_ID__c&amp;&apos;-Id&apos; , &apos;&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm ID (-id)</label>
    <type>Text</type>
</CustomField>