force-app/main/default/objects/Account/fields/First_Client_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Client_Create_Date__c</fullName>
    <description>Date of when first client was added to reseller account</description>
    <label>First Client Create Date</label>
    <type>Date</type>
</CustomField>