force-app/main/default/objects/Account/fields/First_Contractor_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Contractor_Payment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Contractor Payment Date</label>
    <type>Date</type>
</CustomField>