force-app/main/default/objects/Account/fields/First_Payroll_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Payroll_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Payroll Date</label>
    <type>Date</type>
</CustomField>