force-app/main/default/objects/Account/fields/First_Payroll_Run__c.field-meta.xml
<CustomField>
    <fullName>First_Payroll_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if cohort date is populated. Also used for AB testing to set Held_out_of_Lead_Communications__c field</description>
    <label>First Payroll Run</label>
    <type>Checkbox</type>
</CustomField>