force-app/main/default/objects/Account/fields/GEP_Account__c.field-meta.xml
<CustomField>
    <fullName>GEP_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field is used to track related GEP Account details.</description>
    <label>GEP Account</label>
    <referenceTo>GEP_Accounts__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>