force-app/main/default/objects/Account/fields/Has_Active_WC_Policy__c.field-meta.xml
<CustomField>
    <fullName>Has_Active_WC_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Api</inlineHelpText>
    <label>Has Active WC Policy</label>
    <type>Checkbox</type>
</CustomField>