force-app/main/default/objects/Account/fields/Has_Eligible_Owners__c.field-meta.xml
<CustomField>
    <fullName>Has_Eligible_Owners__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Eligible Owners</label>
    <type>Checkbox</type>
</CustomField>