force-app/main/default/objects/Account/fields/Has_paid_W_2_or_1099_elsewhere__c.field-meta.xml
<CustomField>
    <fullName>Has_paid_W_2_or_1099_elsewhere__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has paid W2 or 1099 elsewhere</label>
    <type>Checkbox</type>
</CustomField>