force-app/main/default/objects/Account/fields/Has_Previous_Payrolls_in_Desired_Year__c.field-meta.xml
<CustomField>
    <fullName>Has_Previous_Payrolls_in_Desired_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Previous Payrolls in Desired Year</label>
    <type>Checkbox</type>
</CustomField>