force-app/main/default/objects/Account/fields/HI_Active_Benefits__c.field-meta.xml
<CustomField>
    <fullName>HI_Active_Benefits__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates if customer has Gusto-managed benefits</description>
    <inlineHelpText>If the account has Gusto-managed Benefits</inlineHelpText>
    <label>HI Active Benefits</label>
    <type>Checkbox</type>
</CustomField>