force-app/main/default/objects/Account/fields/HI_Closed_Lost_Detail_2__c.field-meta.xml
<CustomField>
    <fullName>HI_Closed_Lost_Detail_2__c</fullName>
    <label>HI Closed Lost Detail 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HI_Closed_Lost_Detail__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Has Existing Benefits (BoR)</fullName>
            </value>
            <value>
                <fullName>Does Not Have Medical Benefits</fullName>
            </value>
            <value>
                <fullName>Small Group - Level Funded</fullName>
            </value>
            <value>
                <fullName>Small Group - Self Insured</fullName>
            </value>
            <value>
                <fullName>Currently on PEO</fullName>
            </value>
            <value>
                <fullName>Grandfathered</fullName>
            </value>
            <value>
                <fullName>Healthcare.gov</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>HRA/Individual</fullName>
            </value>
            <value>
                <fullName>Supplemental/Aflac</fullName>
            </value>
            <value>
                <fullName>Large Group - Fully Insured</fullName>
            </value>
            <value>
                <fullName>Large Group - Level Funded</fullName>
            </value>
            <value>
                <fullName>Large Group - Self Insured</fullName>
            </value>
            <value>
                <fullName>Need Large Group Plan</fullName>
            </value>
            <value>
                <fullName>Future Large Group</fullName>
            </value>
            <value>
                <fullName>BSBS (NC)</fullName>
            </value>
            <value>
                <fullName>Trust or Association</fullName>
            </value>
            <value>
                <fullName>Unum (Voluntary LiDi)</fullName>
            </value>
            <value>
                <fullName>UPMC (PA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>