force-app/main/default/objects/Account/fields/HI_First_Touch1__c.field-meta.xml
<CustomField>
    <fullName>HI_First_Touch1__c</fullName>
    <formula>ROUND( 8 * (
   ( 5 * FLOOR( ( DATEVALUE( HI_Rep_First_Touch__c ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( HI_Rep_First_Touch__c ) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 8 * ( MOD( HI_Rep_First_Touch__c - DATETIMEVALUE( &apos;1900-01-08 14:00:00&apos; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( HI_Opp_Creation__c ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( HI_Opp_Creation__c ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 8 * ( MOD( HI_Opp_Creation__c - DATETIMEVALUE( &apos;1900-01-08 14:00:00&apos; ), 1) ) )
    )
   ) 
  ), 
0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Business hours Opp Creation to HI first touch on Opp</inlineHelpText>
    <label>HI First Touch</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>