force-app/main/default/objects/Account/fields/HI_Owner_Inactive__c.field-meta.xml
<CustomField>
    <fullName>HI_Owner_Inactive__c</fullName>
    <description>flag when HI owner is inactive</description>
    <formula>NOT  (HI_Owner__r.IsActive)</formula>
    <label>HI Owner Inactive</label>
    <type>Checkbox</type>
</CustomField>