force-app/main/default/objects/Account/fields/HI_Rep_First_Touch__c.field-meta.xml
<CustomField>
    <fullName>HI_Rep_First_Touch__c</fullName>
    <description>First HI point of contact on the most recent, open opportunity.</description>
    <inlineHelpText>First HI point of contact on the most recent, open opportunity.</inlineHelpText>
    <label>HI Rep First Touch</label>
    <type>DateTime</type>
</CustomField>