force-app/main/default/objects/Account/fields/Initiated_NP_Flow__c.field-meta.xml
<CustomField>
    <fullName>Initiated_NP_Flow__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initiated NP Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>