force-app/main/default/objects/Account/fields/Integration_Zenefits__c.field-meta.xml
<CustomField>
    <fullName>Integration_Zenefits__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Manually updated from Panda</inlineHelpText>
    <label>Has Zenefits Integration</label>
    <type>Checkbox</type>
</CustomField>