force-app/main/default/objects/Account/fields/Is_Active_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Customer__c</fullName>
    <formula>NOT(ISBLANK(Joined_Date_Panda__c)) &amp;&amp;
NOT(ISBLANK(ZP_Company_ID__c))</formula>
    <label>Active Customer</label>
    <type>Checkbox</type>
</CustomField>