force-app/main/default/objects/Account/fields/Joined_Date_Panda__c.field-meta.xml
<CustomField>
    <fullName>Joined_Date_Panda__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Joined Date</label>
    <type>Date</type>
</CustomField>