force-app/main/default/objects/Account/fields/Landing_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Landing Page URL</label>
    <type>Url</type>
</CustomField>