force-app/main/default/objects/Account/fields/Last_Account_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Account_Activity_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Account Activity Date</label>
    <type>Date</type>
</CustomField>