force-app/main/default/objects/Account/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>Indicates the last time a Reseller Contact was reached out to via call or event as either a connect or attempted connect directly on the Reseller Account or a related opportunity.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indicates the last time a Reseller Contact was reached out to via call or event as either a connect or attempted connect directly on the Reseller Account or a related opportunity.</inlineHelpText>
    <label>Last Rep Activity Date</label>
    <type>Date</type>
</CustomField>