force-app/main/default/objects/Account/fields/Last_Call_Connect__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Connect__c</fullName>
    <description>Updated by the most recent Activity with a status of &apos;Connect from the Opportunity or Account.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indicates the last time a Reseller Contact was successfully connected with (call or event) either directly on the Reseller Account or a related opportunity.</inlineHelpText>
    <label>Last Call Connect</label>
    <type>Date</type>
</CustomField>