force-app/main/default/objects/Account/fields/Last_Call_Connect_by_Owner__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Connect_by_Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Call Connect by (Owner)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>