force-app/main/default/objects/Account/fields/Last_Client_CW_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Client_CW_Date__c</fullName>
    <description>Captures date of when last client opportunity got Closed Won for Reseller account.</description>
    <label>Last Client CW Date</label>
    <type>Date</type>
</CustomField>