force-app/main/default/objects/Account/fields/Last_Login_Details__c.field-meta.xml
<CustomField>
    <fullName>Last_Login_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Api</inlineHelpText>
    <label>Last Login Details</label>
    <length>200</length>
    <type>Text</type>
</CustomField>