force-app/main/default/objects/Account/fields/Last_Login_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Login_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Api</inlineHelpText>
    <label>Last Login Time</label>
    <type>DateTime</type>
</CustomField>