force-app/main/default/objects/Account/fields/Last_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Last_Meeting__c</fullName>
    <description>Used for Affinity for Salesforce data mapping</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Meeting</label>
    <type>DateTime</type>
</CustomField>