force-app/main/default/objects/Account/fields/Last_Payroll_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Payroll_Run_Date__c</fullName>
    <description>Field to capture Last Payroll Run Date.</description>
    <label>Last Payroll Run Date</label>
    <type>Date</type>
</CustomField>