force-app/main/default/objects/Account/fields/Last_Rep_Activity_Date_New__c.field-meta.xml
<CustomField>
    <fullName>Last_Rep_Activity_Date_New__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Rep Activity Date New</label>
    <type>Date</type>
</CustomField>