force-app/main/default/objects/Account/fields/Last_Sales_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Activity_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Sales Activity Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>