force-app/main/default/objects/Account/fields/Lead_Medium__c.field-meta.xml
<CustomField>
    <fullName>Lead_Medium__c</fullName>
    <description>Lead attribution dimension passed from the converted Lead</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Lead attribution dimension passed from the converted Lead</inlineHelpText>
    <label>Lead Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>